# Mango

./: .gitignore  .gitmodules  CMakeLists.txt
editor/: CMakeLists.txt
editor/app/: App.cpp  App.hpp  main.cpp
examples/: CMakeLists.txt
examples/base/: main.cpp
examples/compute/: main.cpp
examples/cube/: App.cpp  App.hpp  main.cpp
examples/cubemap/: App.cpp  App.hpp  main.cpp
examples/gltf/: App.cpp  App.hpp  main.cpp
examples/procedure/: App.cpp  App.hpp  main.cpp
examples/renderer/: App.cpp  App.hpp  main.cpp
glsl/: compute.glsl  cubemap.frag  cubemap.vert  gltf.frag  gltf.vert  test.frag
glsl/procedure/: main.frag
glsl/renderer/: cubemap_filter.frag  cubemap_filter.vert  final.frag  gbuffer.frag  gbuffer.vert  image2cube.frag  image2cube.vert  irradiance.frag  light.glsl  pbr.frag
glsl/renderer/raytracer/: camera.frag  camera.vert  raytrace.glsl
src/: CMakeLists.txt  mango.hpp  third_party.hpp
src/api/: Buffer.hpp  CommandBuffer.hpp  Compute.cpp  Compute.hpp  DescPool.cpp  DescPool.hpp  DescSet.hpp  Device.hpp  Framebuffer.cpp  Framebuffer.hpp  Instance.cpp  Instance.hpp  Pipeline.cpp  Pipeline.hpp  ShaderCode.cpp  ShaderCode.hpp  Texture.hpp  Types.hpp  Utils.cpp  buffer.hpp  commandbuffer.hpp  default.hpp  descset.hpp  device.hpp  framebuffer.cpp  framebuffer.hpp  instance.hpp  mesh.cpp  mesh.hpp  pipeline.cpp  pipeline.hpp  texture.hpp  types.hpp  uniform.cpp  uniform.hpp  utils.cpp  utils.hpp
src/app/: BaseApp.hpp  MainApp.cpp  MainApp.hpp  MainAppGLFW.cpp  MainAppGLFW.hpp  MainAppIOS.cpp  MainAppIOS.hpp
src/core/: File.cpp  File.hpp
src/gpu/: GPU.cpp  GPU.hpp  GPUInit.hpp  GPUResources.hpp
src/gpu/general/: Buffer.cpp  Buffer.hpp  BufferRaw.cpp  BufferRaw.hpp  CMakeLists.txt  RenderPipelineTypes.hpp  Texture.cpp  Texture.hpp  TextureRaw.cpp  TextureRaw.hpp  TextureTypes.hpp
src/gpu/metal/: CMakeLists.txt  MetalInit.hpp  MetalInit.mm  MetalResources.hpp  MetalResources.mm
src/gpu/metal/convert/: MetalTextureTypes.hpp  MetalTextureTypes.mm
src/gpu/vulkan/: CMakeLists.txt  VulkanInit.cpp  VulkanInit.hpp  VulkanResources.cpp  VulkanResources.hpp
src/gpu/vulkan/convert/: VkTextureTypes.cpp  VkTextureTypes.hpp
src/gpu/vulkan/utils/: VkRenderPipelineTypes.cpp  VkRenderPipelineTypes.hpp  VkTextureTypes.cpp  VkTextureTypes.hpp
src/old/api/: Buffer.hpp  CommandBuffer.hpp  DescLayout.cpp  DescLayout.hpp  DescPool.hpp  DescSet.hpp  Device.hpp  Framebuffer.cpp  Framebuffer.hpp  Pipeline.cpp  Pipeline.hpp  Utils.cpp  Utils.hpp  default.hpp
src/old/scene/: BBox.cpp  BBox.hpp  Camera.cpp
src/old/unified/: Image.cpp  Timer.cpp  Timer.hpp
src/old/vk/: CommandBufferVK.hpp  ConvertVK.hpp  DescLayoutVK.cpp  DescLayoutVK.hpp  DescPoolVK.cpp  DescPoolVK.hpp  DescSetVK.cpp  DescSetVK.hpp  DeviceVK.cpp  FramebufferVK.hpp  InstanceVK.cpp  PipelineVK.cpp  PipelineVK.hpp  ShaderVK.cpp  ShaderVK.hpp  TextureVK.cpp  TextureVK.hpp
src/renderer/: GBuffer.cpp  GBuffer.hpp  PBR.cpp  PBR.hpp  Raytracer.cpp  Raytracer.hpp  Renderer.cpp  Renderer.hpp
src/scene/: Assets.cpp  Assets.hpp  BBox.cpp  BBox.hpp  BVH.cpp  BVH.hpp  Camera.cpp  Camera.hpp  Context.cpp  Context.hpp  Geometry.cpp  Geometry.hpp  ImageBasedLight.cpp  ImageBasedLight.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Renderable.cpp  Renderable.hpp  Scene.cpp  Scene.hpp  SceneNode.cpp  SceneNode.hpp  SceneTransform.cpp  SceneTransform.hpp  Skin.cpp  Skin.hpp
src/unified/: Image.cpp  Image.hpp  Mesh.cpp  Mesh.hpp  RenderTarget.cpp  RenderTarget.hpp  Timer.cpp  Timer.hpp  Uniform.cpp  Uniform.hpp  Utils.cpp  Utils.hpp  image.cpp  mesh.cpp  mesh.hpp  uniform.cpp  uniform.hpp  utils.cpp  utils.hpp
src/vk/: BufferVK.cpp  BufferVK.hpp  CommandBufferVK.cpp  CommandBufferVK.hpp  ComputeVK.cpp  ComputeVK.hpp  ConvertVK.cpp  ConvertVK.hpp  DescLayoutVK.cpp  DescLayoutVK.hpp  DescPoolVK.cpp  DescPoolVK.hpp  DescSetVK.cpp  DescSetVK.hpp  DeviceVK.cpp  DeviceVK.hpp  FramebufferVK.cpp  FramebufferVK.hpp  InstanceVK.cpp  InstanceVK.hpp  PipelineVK.cpp  PipelineVK.hpp  ShaderVK.cpp  ShaderVK.hpp  Swapchain.cpp  Swapchain.hpp  TextureVK.cpp  TextureVK.hpp  buffer_vk.cpp  buffer_vk.hpp  commandbuffer_vk.cpp  commandbuffer_vk.hpp  convert_vk.cpp  convert_vk.hpp  default.hpp  descset_vk.cpp  descset_vk.hpp  device_vk.cpp  device_vk.hpp  framebuffer_vk.cpp  (+9 more)
tests/: CMakeLists.txt
tests/GPU/: GPUTest.cpp  GPUTest.hpp  MetalTest.cpp  MetalTest.hpp  Resources.cpp  Resources.hpp  VulkanTest.cpp  VulkanTest.hpp  main.cpp
tests/ShaderCode/: ShaderCodeTest.cpp  input.glsl  modified.glsl  mutable.glsl
xcode/mango/: mango.h
xcode/mango.xcodeproj/: project.pbxproj
xcode/mango.xcworkspace/: contents.xcworkspacedata
